# permeant-os

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  runtime_adapter.md
.github/workflows/: evidence-jobs.yml  pr-ci.yml  real-release.yml  release-artifacts.yml  release-validation.yml
adapters/: agent_graph_span_metadata.py  analyze_real_runtime_fidelity.py  generate_mock_extractor_fixture.py  llamacpp_hook_template.py  llamacpp_injector.py  llamacpp_live_binding_hook_template.py  llamacpp_live_state_bridge.cpp  llamacpp_live_state_hook.py  llamacpp_raw_kv_bridge.cpp  llamacpp_runtime_bridge.py  mlx_extractor.py  mlx_hook_template.py  mlx_http_cache_provider.py  mlx_live_runtime.py  mlx_lm_runtime_provider.py  mlx_runtime_bridge.py  mlx_runtime_exporter.py  mlx_runtime_provider_example.py  my_mlx_provider.py  my_vllm_consumer.py  production_transport_proxy.py  pytorch_hook_template.py  pytorch_injector.py  pytorch_runtime_bridge.py  run_fixture_roundtrip.py  run_vllm_live_runtime_demo.py  runpod_http_daemon_bridge.py  runtime_adapter_utils.py  vllm_directory_consumer.py  vllm_hook_template.py  vllm_http_runtime_hook.py  vllm_import_worker.py  vllm_injector.py  vllm_live_runtime_registry.py  vllm_real_runtime_consumer.py  vllm_real_runtime_target.py  vllm_runtime_bridge.py  vllm_runtime_hook_example.py  vllm_runtime_receiver.py
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs
crates/injector/: Cargo.toml
crates/injector/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: decision.rs  lib.rs  policy.rs  state.rs
crates/qatq-compat/: Cargo.toml
crates/qatq-compat/src/: lib.rs
crates/qatq-migration/: Cargo.toml
crates/qatq-migration/src/: lib.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: layout.rs  lib.rs  quant.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/transport/tests/: integration.rs
crates/usxf-core/: Cargo.toml
crates/usxf-core/src/: crypto.rs  header.rs  lib.rs  validation.rs  version.rs
docs/: adaptive-transfer-codecs.md  agent-activity-continuation-proof-2026-06-20.md  agent-framework-adapters.md  agent-memory-graph-threat-model.md  agent-memory-graph.md  aws-fallback-e2e-2026-06-15.md  aws-gpu-e2e-2026-06-15.md  aws-prewarm-image.md  aws-real-runtime-agent-activity-continuation-2026-06-20.md  aws-real-runtime-complex-agent-2026-06-20.md  aws-real-runtime-e2e-2026-06-15.md  aws-real-runtime-e2e-2026-06-16.md  aws-real-runtime-e2e-runner.md  aws-real-runtime-fidelity-followup-2026-06-16.md  aws-real-runtime-long-horizon-2026-06-21.md  aws-real-runtime-production-transport-2026-06-20.md  aws-real-runtime-qatq-2026-06-20.md  aws-real-runtime-qatq-exact-complex-2026-06-22.md  aws-real-runtime-qatq-standalone-compression-2026-06-22.md  aws-real-runtime-qwen15-attempts-2026-06-21.md  aws-real-runtime-roundtrip-continuation-2026-06-20.md  aws-real-runtime-tinyllama-2026-06-21.md  aws-real-runtime-transfer-quantization-2026-06-20.md  benchmark-comparison.md  benchmark-summary-tooling.md  context-benchmark-matrix.md  crate-and-sdk-publication-plan.md  deployment-and-testing-guide.md  e2e-validation-checkpoint-2026-06-20.md  evidence-index.json  evidence-index.md  fidelity-horizon-suite.md  first-real-cross-host-run.md  graph-attached-kv-migration-plan.md  implementation-plan.md  index.md  live-runtime-http-bridge.md  live-runtime-source-http-bridge.md  llama-cpp-cross-runtime-canonical-kv-proof-2026-06-21.md  llama-cpp-live-state-binding-proof-2026-06-21.md  (+20 more)
docs/releases/: v0.1.0.md
docs/schemas/: agent-memory-graph-v0.schema.json
docs/website/: white-paper.md
examples/agent-memory-graph/: README.md  framework_adapters.py  local_agent.py
paper/arxiv/: README.md  permeantos-usxf.tex  references.bib
paper/arxiv-upload/: permeantos-usxf.bbl  permeantos-usxf.tex
scripts/: analyze-fidelity-horizons.py  aws-prewarm-cost-estimate.py  aws-real-runtime-e2e.sh  build-release-artifacts.py  check-crate-packaging.py  check-package-readiness.py  check-publishing-policy.py  check-real-release-config.py  check-release-version.py  compare-transfer-quantization.py  export-mlx-canonical-kv-for-llamacpp.py  export-qatq-captures.py  generate-evidence-index.py  plan-context-benchmarks.py  plan-model-runtime-validations.py  plan-real-release.py  plan-transfer-codecs.py  run-adapter-conformance.py  run-evidence-job.py  summarize-benchmark-manifests.py  validate-release.py
sdk/python/: README.md  pyproject.toml  test_sdk.py
sdk/python/permeantos/: __init__.py  client.py  memory_graph.py
tests/: test_adapter_conformance_report.py  test_agent_framework_adapters.py  test_agent_graph_span_metadata.py  test_agent_memory_graph_harness.py  test_agent_memory_graph_schema.py  test_analyze_fidelity_horizons.py  test_analyze_real_runtime_fidelity.py  test_aws_prewarm_cost_estimate.py  test_aws_real_runtime_e2e_preflight.py  test_aws_real_runtime_runner_static.py  test_build_release_artifacts.py  test_compare_transfer_quantization.py  test_crate_packaging.py  test_evidence_jobs.py  test_generate_evidence_index.py  test_llamacpp_runtime_adapter.py  test_package_readiness.py  test_plan_context_benchmarks.py  test_plan_model_runtime_validations.py  test_plan_transfer_codecs.py  test_publishing_policy.py  test_pytorch_runtime_adapter.py  test_real_release_config.py  test_real_release_plan.py  test_release_version.py  test_runtime_adapters.py  test_runtime_http_bridge.py  test_summarize_benchmark_manifests.py  test_validate_release.py  test_versioning_policy.py  test_vllm_import_worker.py  test_vllm_live_runtime_registry.py
tests/fixtures/: agent_memory_graph_v0.json  extractor_response.json  runtime_adapter_hooks.py  vllm_live_runtime_fixture.py
