[workspace]
resolver = "2"
members = [
    "crates/usxf-core",
    "crates/transpiler",
    "crates/transport",
    "crates/orchestrator",
    "crates/extractor",
    "crates/injector",
    "crates/cli"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
crc32fast = "1.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.10"
prost = "0.12"
prost-build = "0.12"
qatq = { path = "/Users/kabudu/projex/qatq" }
