[package]
name = "permeant-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
usxf-core = { path = "../usxf-core" }
permeant-transpiler = { path = "../transpiler" }
permeant-transport = { path = "../transport" }
permeant-orchestrator = { path = "../orchestrator" }
permeant-extractor = { path = "../extractor" }
permeant-injector = { path = "../injector" }
