[package]
name = "permeant-cli"
version = "0.1.0"
edition = "2021"
description = "PermeantOS command-line tooling for live AI agent state migration"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
lz4_flex.workspace = true
zstd.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
usxf-core = { path = "../usxf-core" }
permeant-transpiler = { path = "../transpiler" }
permeant-transport = { path = "../transport" }
permeant-orchestrator = { path = "../orchestrator" }
permeant-extractor = { path = "../extractor" }
permeant-injector = { path = "../injector" }
