[package]
name = "permeant-cli"
version = "0.1.0"
edition = "2021"
description = "PermeantOS command-line tooling for live AI agent state migration"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
lz4_flex.workspace = true
zstd.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
rand.workspace = true
usxf-core = { version = "0.1.0", path = "../usxf-core" }
permeant-transpiler = { version = "0.1.0", path = "../transpiler" }
permeant-transport = { version = "0.1.0", path = "../transport" }
permeant-orchestrator = { version = "0.1.0", path = "../orchestrator" }
permeant-extractor = { version = "0.1.0", path = "../extractor" }
permeant-injector = { version = "0.1.0", path = "../injector" }
