[package]
name = "permeant-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
usxf-core = { path = "../usxf-core" }
permeant-transpiler = { path = "../transpiler" }
permeant-transport = { path = "../transport" }
