[package]
name = "permeant-orchestrator"
version = "0.1.0"
edition = "2021"
description = "PermeantOS migration orchestration and two-phase commit coordination"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
usxf-core = { version = "0.1.0", path = "../usxf-core" }
permeant-transpiler = { version = "0.1.0", path = "../transpiler" }
permeant-transport = { version = "0.1.0", path = "../transport" }
