[package]
name = "qatq"
version = "0.1.0"
edition = "2021"
description = "PermeantOS in-tree compatibility shim for the external QATQ crate"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[lib]
name = "qatq"
path = "src/lib.rs"
