[package]
name = "permeant-transpiler"
version = "0.1.0"
edition = "2021"
description = "PermeantOS KV layout normalization and transfer codec planning"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
qatq.workspace = true
usxf-core = { path = "../usxf-core" }
