[package]
name = "permeant-transport"
version = "0.1.0"
edition = "2021"
description = "PermeantOS secure migration transport frames and negotiation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
crc32fast.workspace = true
usxf-core = { path = "../usxf-core" }
ed25519-dalek.workspace = true

[dev-dependencies]
chrono.workspace = true
rand.workspace = true
