[package]
name = "usxf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
