[package]
name = "usxf-core"
version = "0.1.0"
edition = "2021"
description = "Unified State Exchange Format core types for PermeantOS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
