[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permeantos"
version = "0.1.0"
description = "PermeantOS Python SDK for migratory AI agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "numpy>=1.20",
]
