[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permeantos"
version = "0.1.0"
description = "PermeantOS Python SDK for migratory AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "PermeantOS contributors" }
]
keywords = [
    "agent-migration",
    "kv-cache",
    "llm",
    "runtime-adapters",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://www.permeantos.org"
Repository = "https://github.com/kabudu/permeant-os"
Documentation = "https://www.permeantos.org/docs/"

[tool.permeantos.release]
publish = false
publish_reason = "Python SDK package publishing remains behind the documented real-release gate."
